# tauri-app

./: index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/controller/: link.rs  mod.rs  note.rs
src-tauri/src/ctx/: ctx.rs
src-tauri/src/model/: link.rs  mod.rs  note.rs  record.rs
src-tauri/src/store/: mod.rs
src-tauri/src/utils/: id.rs
src/components/: add-link.tsx  add-note.tsx  note-list.tsx  note.tsx
